# matrixs-main

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: 10  CMakeLists.txt  Iterative_solvers.cpp  benchmark_example.cpp  examples.cpp  generateMatrix.cpp  iterative_solvers.h  main.cpp  matrix_file_handler.h  matrix_solver.h  matrix_solvers.h  performance_report_example.cpp  performance_report_fast.cpp  performance_report_fixed.cpp  performance_report_simple.cpp  testmmapmatrix.h  thread_pool.h  thread_pool_test.cpp
googletest-download/: CMakeLists.txt
googletest-download/googletest-prefix/src/googletest-stamp/: googletest-gitclone-lastrun.txt  googletest-update-info.txt
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
include/: ARCHITECTURE.md  README.md  benchmark.h  dense_matrix_storage.h  gauss_seidel_solver.h  gaussian_elimination.h  gmres_solver.h  jacobian_solver.h  matrix.h  matrix_storage_cep_config.h  matrix_type_traits.h  operator_proxy.h  performance_reporter.h  qr_decomposition.h  sor.h  sparse_matrix_storage.h
test/: CMakeLists.txt  CmakeLists.txt.in  gauss_seidel_test.cpp  gmres_test.cpp  jacobian_test.cpp  matrix_storage_block_test.cpp  matrix_storage_cep_test.cpp  matrix_test.cpp  test_matrixGenerator.cpp
